sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:6: error: value and is not a member of Boolean
  while (cycleTri==false and longueur!=2) {
                         ^