sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  
  var cycleTri : Boolean = false
  var longueur: Int = getNombreValeurs()
  while (cycleTri==false and longueur!=2) {
    cycleTri=true
    longueur=longueur-1
     for (i<-0 to longueur-2) {
      	if (!plusPetit(i,i+1)) {
        	echange(i,i+1)
        	cycleTri=false
}
    }
    } 
  }
